[package]
name = "axum-integration-example"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.6", features = ["trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }

# Database dependencies
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "uuid", "migrate"], optional = true }

# Authentication dependencies
jsonwebtoken = { version = "9.0", optional = true }
bcrypt = { version = "0.15", optional = true }

# Documentation dependencies
utoipa = { version = "4.0", features = ["axum_extras", "chrono", "uuid"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

# Monitoring dependencies
prometheus = { version = "0.14", optional = true }
metrics = { version = "0.22", optional = true }
metrics-prometheus = { version = "0.6", optional = true }

# Additional dependencies for enhanced features
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
async-trait = "0.1"
anyhow = "1.0"

[features]
default = ["auth"]
postgres = ["dep:sqlx", "sqlx/postgres"]
sqlite = ["dep:sqlx", "sqlx/sqlite"]
auth = ["dep:jsonwebtoken", "dep:bcrypt"]
docs = ["dep:utoipa", "dep:utoipa-swagger-ui"]
monitoring = ["dep:prometheus", "dep:metrics", "dep:metrics-prometheus"]
full = ["postgres", "sqlite", "auth", "docs", "monitoring"]

[dev-dependencies]
http-body-util = "0.1"
http = "1.0"
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json"] }
