[package]
name = "chaos-engineering-framework"
version = "1.0.0"
edition = "2021"
description = "Comprehensive chaos engineering and resilience testing framework"

[[bin]]
name = "chaos_orchestrator"
path = "framework/chaos_orchestrator.rs"

[[bin]]
name = "resilience_validator"
path = "framework/resilience_validator.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { workspace = true, features = ["v4", "serde"] }

# HTTP and networking
reqwest = { workspace = true }
http = { workspace = true }

# Async utilities
async-trait = { workspace = true }

# Configuration
serde_yaml = { workspace = true }
toml = { workspace = true }

# Kubernetes client
kube = "0.90"
k8s-openapi = { version = "0.22", features = ["latest"] }

# Metrics and monitoring
prometheus = { workspace = true }

# Additional utilities
base64 = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
