[package]
name = "common"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Common types and utilities for the rust-security workspace"
repository = "https://github.com/lsendel/rust-security"
readme = "../README.md"
keywords = ["security", "auth", "crypto"]
categories = ["authentication", "cryptography", "network-programming"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
url = { workspace = true }
regex = { workspace = true }
rand = { workspace = true }
async-trait = { workspace = true }
# Crypto dependencies
ring = { workspace = true }
base64 = { workspace = true }
hex = { workspace = true }
constant_time_eq = { workspace = true }
# Redis dependencies
deadpool-redis = { workspace = true, optional = true }
redis = { workspace = true }
# Rate limiting dependencies
tokio = { workspace = true, features = ["sync", "time", "macros"] }
# Logging
tracing = { workspace = true }
# System info
num_cpus = { workspace = true }
# Lazy initialization
once_cell = { workspace = true }

[features]
default = []