[package]
name = "compliance-tools"
version = "0.1.0"
edition = "2021"
description = "Rust-based compliance reporting and validation tools"
authors = ["Rust Security Team"]
license = "MIT"

[lints]
workspace = true

[[bin]]
name = "compliance-report-generator"
path = "src/bin/compliance_report_generator.rs"

[[bin]]
name = "threat-feed-validator"
path = "src/bin/threat_feed_validator.rs"

[[bin]]
name = "sbom-generator"
path = "src/bin/sbom_generator.rs"


[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
fastrand = "2.2"
uuid = { workspace = true }

# HTTP and API clients
reqwest = { workspace = true }
url = { workspace = true }

# Template engine for reports
tera = { workspace = true }
handlebars = { workspace = true }

# Configuration and environment
dotenvy = { workspace = true }

# Prometheus metrics
prometheus = { workspace = true }

# File system operations
walkdir = { workspace = true }
tempfile = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Date/time parsing
regex = { workspace = true }

# Redis for caching (currently unused but kept for future features)
# redis = { workspace = true, optional = true }

# Common utilities
common = { path = "../common" }

# Non-workspace dependencies
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
config = "0.14"
# printpdf = { version = "0.7", optional = true }  # Currently unused
calamine = "0.25"
# rust_xlsxwriter = { version = "0.76", optional = true }  # Currently unused
pulldown-cmark = "0.12"
moka = { version = "0.12", features = ["future"] }
# polars = { version = "0.44", features = ["lazy", "temporal", "json"] } # Temporarily disabled due to RUSTSEC-2025-0003 and RUSTSEC-2025-0020

[dev-dependencies]
# tokio-test = { workspace = true }  # Currently unused
# wiremock = { workspace = true }  # Currently unused

[features]
default = ["prometheus-metrics"]
prometheus-metrics = []
# pdf-reports = ["printpdf"]  # Disabled until needed
# excel-reports = ["dep:rust_xlsxwriter"]  # Disabled until needed
# redis-cache = ["redis"]  # Disabled until needed
