[package]
name = "compliance-tools"
version = "0.1.0"
edition = "2021"
description = "Rust-based compliance reporting and validation tools"
authors = ["Rust Security Team"]
license = "MIT"
repository = "https://github.com/lsendel/rust-security"
readme = "README.md"
keywords = ["compliance", "reporting", "validation", "security", "threat-feed", "sbom"]
categories = ["development-tools", "development-tools::build-utils", "security"]

# Removed workspace lints to fix compilation

[[bin]]
name = "compliance-report-generator"
path = "src/bin/compliance_report_generator.rs"

[[bin]]
name = "threat-feed-validator"
path = "src/bin/threat_feed_validator.rs"

[[bin]]
name = "sbom-generator"
path = "src/bin/sbom_generator.rs"

# Git hooks setup moved to workspace scripts


[dependencies]
# Core dependencies
tokio = { version = "1.37", features = ["full"] }
anyhow = "1.0.82"
thiserror = "2.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
fastrand = "2.2"
uuid = { version = "1.11", features = ["v4", "serde"] }

# HTTP and API clients
reqwest = { version = "0.12", features = ["json"] }
url = "2.5.4"

# Template engine for reports
tera = "1.20"
handlebars = "6.2"

# Configuration and environment
dotenvy = "0.15"

# Prometheus metrics
prometheus = "0.14"

# File system operations
walkdir = "2.5"
tempfile = "3.13"

# Cryptography
sha2 = "0.10"

# Date/time parsing
regex = "1.11"

# Redis for caching (currently unused but kept for future features)
# redis = { workspace = true, optional = true }

# Common utilities
common = { path = "../common" }

# Non-workspace dependencies
serde_yaml = "0.9"
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"
config = "0.14"
# printpdf = { version = "0.7", optional = true }  # Currently unused
calamine = "0.25"
# rust_xlsxwriter = { version = "0.76", optional = true }  # Currently unused
pulldown-cmark = "0.12"
moka = { version = "0.12", features = ["future"] }
# polars = { version = "0.44", features = ["lazy", "temporal", "json"] } # Temporarily disabled due to RUSTSEC-2025-0003 and RUSTSEC-2025-0020

[dev-dependencies]
# tokio-test = { workspace = true }  # Currently unused
# wiremock = { workspace = true }  # Currently unused

[features]
default = ["prometheus-metrics"]
prometheus-metrics = []
# pdf-reports = ["printpdf"]  # Disabled until needed
# excel-reports = ["dep:rust_xlsxwriter"]  # Disabled until needed
# redis-cache = ["redis"]  # Disabled until needed
