[package]
name = "mvp-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Essential tooling dependencies
serde_json = { workspace = true }
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
futures = "0.3"
# anyhow = { workspace = true }  # Unused - removed by cargo-machete
# clap = { workspace = true }    # Unused - removed by cargo-machete
# serde = { workspace = true }   # Unused - removed by cargo-machete

# Reference to other workspace members
common = { path = "../common" }

# Optional features for different tools
[features]
default = ["security-essential"]
security-essential = []
