[package]
name = "mvp-tools"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Essential tooling dependencies
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }

# Reference to other workspace members
common = { path = "../common" }

# Dependencies needed for examples
rand = { workspace = true }
hex = { workspace = true } 
sha2 = { workspace = true }

# Optional features for different tools
[features]
default = ["security-essential"]
security-essential = []
