[package]
name = "mvp-tools"
version = "0.1.0"
license = "MIT"
edition.workspace = true
rust-version.workspace = true

[dependencies]
# Essential tooling dependencies
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
reqwest = { workspace = true }
once_cell = { workspace = true }
async-trait = { workspace = true }
log = { workspace = true }

# Reference to other workspace members
# common = { path = "../common" } # Temporarily disabled due to compilation issues

# Dependencies needed for examples
rand = { workspace = true }
hex = { workspace = true }
sha2 = { workspace = true }
cargo-geiger = "0.13.0"

# Optional features for different tools
[features]
default = ["security-essential"]
security-essential = []
