[package]
name = "policy-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
cedar-policy = "3"
tower-http = { version = "0.6", features = ["trace", "request-id", "cors"] }
utoipa = { version = "4", features = ["axum_extras"] }
dotenvy = "0.15"
cedar-policy-core = "4.5.1"
thiserror = "2.0.14"

[dev-dependencies]
reqwest = { version = "0.12", features = ["json"] }

[lib]
name = "policy_service"
path = "src/lib.rs"

[[bin]]
name = "policy-service"
path = "src/main.rs"

