[package]
name = "policy-service"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Enterprise policy engine service with Cedar Policy language support"
authors = ["Security Team"]
repository = "https://github.com/lsendel/rust-security"
readme = "README.md"
keywords = ["policy", "authorization", "cedar", "security", "rbac"]
categories = ["web-programming::http-server", "authentication", "authorization"]

[lints]
workspace = true

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
cedar-policy = { workspace = true }
tower-http = { workspace = true }
utoipa = { workspace = true }
dotenvy = { workspace = true }
cedar-policy-core = { workspace = true }
thiserror = { workspace = true }
prometheus = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
reqwest = { workspace = true }
tempfile = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }

[lib]
name = "policy_service"
path = "src/lib.rs"

[[bin]]
name = "policy-service"
path = "src/main.rs"

