[package]
name = "red-team-exercises"
version = "0.1.0"
edition = "2021"
description = "Red team security testing exercises and attack simulations"

[lints]
workspace = true

[dependencies]
tokio = { workspace = true, features = ["fs"] }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
rand = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
base64 = { workspace = true }
jsonwebtoken = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
url = { workspace = true }
redis = { workspace = true }
prometheus = { workspace = true }
hyper = { workspace = true }
urlencoding = { workspace = true }
async-trait = { workspace = true }
pprof = { workspace = true, optional = true }
criterion = { workspace = true, optional = true }
# Non-workspace dependencies
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
pem = "3.0"
x509-parser = "0.15"
pretty_assertions = "1.4"
colored = "2.0"
indicatif = "0.17"
tabular = "0.2"
hex = "0.4"
# Integration dependencies
config = "0.14"
toml = "0.8"
xml-rs = "0.8"
elasticsearch = "8.19.0-alpha.1"
serde-xml-rs = "0.6"
# kafka = "0.10" # Requires OpenSSL, commented out
rdkafka = "0.36"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-sdk-sqs = "1.0"
slack-morphism = "1.14"
teloxide = "0.12"
webhook = "2.1"
# rust-crypto removed due to security vulnerability - use ring and modern crypto libraries instead
ring = "0.17"
# rust-smtp = "0.21" # Package not found, commented out
# Common utilities (optional)
# common = { path = "../common", optional = true }

[features]
default = []
benchmarks = ["criterion", "pprof"]
