[package]
name = "red-team-exercises"
version = "0.1.0"
edition = "2021"
description = "Red team security testing exercises and attack simulations"

[dependencies]
tokio = { version = "1.0", features = ["fs", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
rand = "0.8"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Security-updated dependencies
base64 = "0.22"
jsonwebtoken = "9.3"  # Uses newer ring
sha2 = "0.10"
hmac = "0.12"
url = "2.5"
redis = "0.26"
prometheus = "0.14"  
hyper = { version = "1.0", features = ["full"] }
urlencoding = "2.1"
async-trait = "0.1"

# Optional dependencies with security fixes
pprof = { version = "0.13", optional = true }  # Updated version
criterion = { version = "0.5", optional = true }

# Non-workspace dependencies  
clap = { version = "4.0", features = ["derive"] }
futures = "0.3"
pem = "3.0"
x509-parser = "0.16"  # Updated for security
pretty_assertions = "1.4"
colored = "2.0"
indicatif = "0.17"
tabular = "0.2"
hex = "0.4"

# Integration dependencies with security updates
config = "0.14"
toml = "0.8"
xml-rs = "0.8"
elasticsearch = "9.1.0-alpha.1"  # Latest available version
serde-xml-rs = "0.6"

# Kafka with updated dependencies
rdkafka = "0.36"
aws-sdk-s3 = "1.0"
aws-config = "1.0"
aws-sdk-sqs = "1.0"
slack-morphism = "2.14.0"  # Updated version
teloxide = "0.12"
webhook = "2.1"

# Updated cryptography - use ring 0.17+ and avoid RSA 0.9.x
ring = "0.17"
# rsa = "0.9.8"  # Removed due to RUSTSEC-2023-0071 - use ring or other alternatives

# DNS resolution - migrate from trust-dns to hickory-dns
hickory-resolver = "0.24"  # Replacement for trust-dns-resolver

[features]
default = []
benchmarks = ["criterion", "pprof"]
