[package]
name = "security-features"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Security features module for authentication, encryption, and threat detection"
authors = ["Security Team"]
keywords = ["security", "authentication", "encryption", "threat-detection"]
categories = ["security"]

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }

# Security
argon2 = { workspace = true }
bcrypt = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
base64 = { workspace = true }
ring = { workspace = true }
zeroize = { workspace = true }

# Rate limiting
dashmap = { workspace = true, optional = true }

# Validation
validator = { workspace = true }
regex = { workspace = true }

# HTTP
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }

# Common workspace dependency
common = { path = "../common" }

[dev-dependencies]
tokio-test = { workspace = true }

[features]
default = ["rate-limiting", "web"]
rate-limiting = ["dashmap"]
web = ["axum", "tower", "tower-http"]
full = ["rate-limiting", "web"]

[lints]
workspace = true
