[package]
name = "security-e2e-testing"
version = "1.0.0"
edition = "2021"
description = "Advanced security end-to-end testing suite with attack simulations"

[[bin]]
name = "security_e2e_suite"
path = "e2e-tests/security_e2e_suite.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

# HTTP client
reqwest = { workspace = true }

# JWT handling
jsonwebtoken = { workspace = true }
base64 = { workspace = true }

# Cryptography
rand = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }

# Configuration
serde_yaml = { workspace = true }
clap = { workspace = true, features = ["derive"] }

# Additional utilities
regex = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
wiremock = { workspace = true }
