[package]
name = "soar-integration"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license = "MIT OR Apache-2.0"
description = "Security Orchestration, Automation, and Response (SOAR) integration module"
authors = ["Security Team"]
keywords = ["security", "soar", "automation", "orchestration", "incident-response"]
categories = ["security"]
repository = "https://github.com/example/rust-security"
readme = "README.md"

[dependencies]
# Core dependencies
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }


[dev-dependencies]

[lints]
workspace = true