[package]
name = "rust-security-regression-tests"
version = "2.0.0"
edition = "2021"
description = "Comprehensive regression test suite for Rust Security Workspace"

[[bin]]
name = "regression-tests"
path = "main.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"

[dev-dependencies]
tokio-test = "0.4"
