[package]
name = "chaos-engineering-framework"
version = "1.0.0"
edition = "2021"
description = "Comprehensive chaos engineering and resilience testing framework"

[[bin]]
name = "chaos_orchestrator"
path = "framework/chaos_orchestrator.rs"

[[bin]]
name = "resilience_validator"
path = "framework/resilience_validator.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = { workspace = true }
wiremock = { workspace = true }
