[package]
name = "compliance-tools"
version = "0.1.0"
edition = "2021"
description = "Rust-based compliance reporting and validation tools"
authors = ["Rust Security Team"]
license = "MIT"
repository = "https://github.com/lsendel/rust-security"
readme = "README.md"
keywords = ["compliance", "reporting", "validation", "security", "threat-feed", "sbom"]
categories = ["development-tools", "development-tools::build-utils", "security"]

[lints]
workspace = true

[[bin]]
name = "compliance-report-generator"
path = "src/bin/compliance_report_generator.rs"

[[bin]]
name = "threat-feed-validator"
path = "src/bin/threat_feed_validator.rs"

[[bin]]
name = "sbom-generator"
path = "src/bin/sbom_generator.rs"

# Git hooks setup moved to workspace scripts


[dependencies]
# Core dependencies
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
chrono = { workspace = true }
fastrand = { workspace = true }
uuid = { workspace = true }

# HTTP and API clients
reqwest = { workspace = true }
url = { workspace = true }

# Template engine for reports
tera = { workspace = true }
handlebars = { workspace = true }

# Configuration and environment
dotenvy = { workspace = true }

# Prometheus metrics (optional; only used when prometheus-metrics feature is enabled)
prometheus = { workspace = true, optional = true }

# File system operations
walkdir = { workspace = true }
tempfile = { workspace = true }

# Cryptography
sha2 = { workspace = true }

# Date/time parsing
regex = { workspace = true }

# Redis for caching (currently unused but kept for future features)
# redis = { workspace = true, optional = true }

# Common utilities
common = { path = "../common" }

# Non-workspace dependencies
serde_yaml = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
csv = { workspace = true }
# printpdf = { version = "0.7", optional = true }  # Currently unused
calamine = { workspace = true }
# rust_xlsxwriter = { version = "0.76", optional = true }  # Currently unused
pulldown-cmark = { workspace = true }
moka = { workspace = true }
# polars = { version = "0.44", features = ["lazy", "temporal", "json"] } # Temporarily disabled due to RUSTSEC-2025-0003 and RUSTSEC-2025-0020

[dev-dependencies]
# tokio-test = { workspace = true }  # Currently unused
# wiremock = { workspace = true }  # Currently unused

[features]
default = []
prometheus-metrics = ["dep:prometheus"]
# pdf-reports = ["printpdf"]  # Disabled until needed
# excel-reports = ["dep:rust_xlsxwriter"]  # Disabled until needed
# redis-cache = ["redis"]  # Disabled until needed
